# ais-dev2il-mlops-train-run

./: README.md  build-cli-predictor-image.sh  build-rest-api-predictor-image.sh  pyproject.toml  run-cli-predictor-container.sh  run-rest-api-predictor-container.sh
.github/workflows/: build.yml  publish.yml  workflow.yml
data/: winequality-cli-predictor-input.csv  winequality-rest-api-predictor-input.json
docker/cli-predictor/: Dockerfile
docker/rest-api-predictor/: Dockerfile
notebooks/: notebook.ipynb
tests/wine_color_predictor/: test_fixtures.py  test_train.py
wine_color_predictor/: cli_predictor.py  rest_api_predictor.py  train.py
